[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/game_mode/game_mode_in_game.gd" type="Script" id=1]
[ext_resource path="res://assets/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/death_screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/pause_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/music/level_music_2.wav" type="AudioStream" id=6]

[node name="GameModeInGame" type="Spatial"]
script = ExtResource( 1 )
player_class = ExtResource( 2 )
hud_class = ExtResource( 3 )
pause_menu_class = ExtResource( 5 )
death_screen_class = ExtResource( 4 )

[node name="LevelMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.576
autoplay = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
